Updated the CRC page

--- a/Cloud Resume Challenge.html
+++ b/Cloud Resume Challenge.html
@@ -45,15 +45,15 @@
 											<li> The website URL uses HTTPS for security with AWS CloudFront</li>
 											<li> Pointed a custom domain name to the CloudFront distribution by using AWS Route 53</li>
 											<li> The resume webpage includes a visitor counter programmed through JavaScript and using AWS DynamoDB database to update the visitor count</li>
-											<li> Used AWS API Gateway and Lambda to communicate directly with DynamoDB</li>
+											<li> Used a Lambda Function URL to communicate directly with DynamoDB</li>
 											<li> Wrote a Lambda function to further advance the functionality of the visitor counter by using Python (including tests)</li>
-											<li> Configured the API resources (DynamoDB table, API Gateway, Lambda function) in an AWS Serverless Application Model (SAM) template and deployed using the AWS SAM CLI</li>
+											<li> Configured all the resources using Terraform</li>
 											<li> Created a GitHub repository for my backend code to do continuous integration and deployment (CI/CD)</li>
-											<li> Set up GitHub Actions to push updates to the SAM template/Python code, so that the Python tests got run and passed</li>
-											<li> Packaged and deployed the SAM application to AWS</li>
+											<li> Set up GitHub Actions to push updates to the Terraform template/Python code, so that the Python tests got run and passed</li>
+											<li> Packaged and deployed the Terraform application to AWS</li>
 											<li> Created a second GitHub repository for my website code, and used GitHub Actions so that when I pushed new website code, the S3 bucket automatically got updated</li>
 										</ol></p>
-										<a href="https://github.com/StudentLoans999/AWS" class="button primary fit">Link to My Project</a>
+										<a href="https://github.com/StudentLoans999/Cloud-Resume-Challenge" class="button primary fit">Link to My Project</a>
 						</div>
 					</div>
 
