--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
 										<h1>My Past -> Currently -> Next Steps</h1>
 									</header>
 
-									<span class="image main"><img src="images/Journey.png" alt="" /></span>
+									<span class="image main"><img src="images/IT_Journey.png" alt="" /></span>
 
 									<h2 style="color: orange;">The tldr</h2>
 									<p>Been working in IT since 2015 in these roles:</p>
@@ -46,6 +46,7 @@
 										<li>System Administrator</li>
 										<li>Data Center Operations Technician</li>
 										<li>Application Administrator</li>
+										<li>Data Analyst</li>
 									</ol>
 
 									<hr class="major" />
@@ -53,7 +54,7 @@
 									<p>In high school, I took a programming class and that was my introduction into participating in the world of technology. 
 										I first learned about the foundation of computer science and languages, with a focus on HTML, CSS, and Python.</p>
 									<p>Now here's the twist, I'm not going to lie to you and say I fell in love with it all and was a happy camper from the start. 
-										I stuggled with that class, even though I found it fascinating, I just couldn't wrap my head around the concepts and thinking in a purely logical, robot-like manner that programming entails and demands.</p>
+										I struggled with that class, even though I found it fascinating, I just couldn't wrap my head around the concepts and thinking in a purely logical, robot-like manner that programming entails and demands.</p>
 									<p>So I took it upon myself to retake the same level one class the next year since I didn't feel I was adept enough to continue on to the next level. 
 										The curriculum had changed slightly, so that kept it fresh with some new material, but this time around I was able to grasp it all with ease after I spent the summer studying the subject matter. 
 										But, I believe what really got me into the knack of it was taking the game development class that same year.</p>
@@ -76,7 +77,7 @@
 									<h2 style="color:chocolate; text-decoration: black underline overline;">System Administrator</h2>
 									<p>After that role ended, I studied for and obtained my first technical certificate, the <a href="https://www.credly.com/badges/6659d0c9-21e0-4508-b464-5b8358e2419c">CompTIA A+</a> 
 										since I heard that it is the introduction to IT and gives a general landscape of what you can see youreslf doing one day.
-									    The test center where I took the exam was also part of a small business academy that prepared students for tehnical and business certifications through their in-person courses.
+									    The test center where I took the exam was also part of a small business academy that prepared students for technical and business certifications through their in-person courses.
 									    I spoke with a few of the employees about my technical experience and how I was looking for a new occupation and they told me to send them my resume and after I did.</p> 
 										<h2 style="color: blue;">They had me come in for a trial week!</h2>
 									    <p>During that week, they introduced me to the business and how it operates, and listed out some tech projects they've been meaning to get around to. I started working on some of them and 
@@ -86,7 +87,7 @@
 										and where I should focus my efforts. They're all listed on my <a href="https://www.linkedin.com/in/davidrichey/details/certifications/">LinkedIn</a> but the most notable one in that time, in terms of effort, difficulty, and content length was the <a href="https://www.credly.com/badges/7de32b24-7d48-4ce3-bde0-ad52f68dab13?source=linked_in_profile">CompTIA Security+</a>
 									</p>
 									<h2 style="color:chocolate; text-decoration: black underline overline;">Data Center Operations Technician</h2>
-									<p>While working as a System Administrator, a recrutier reached out to me and that led to me going to full-time work at Amazon Web Services (AWS) and switching to freelance for my System Administrator position with my previous employer.
+									<p>While working as a System Administrator, a recruiter reached out to me and that led to me going to full-time work at Amazon Web Services (AWS) and switching to freelance for my System Administrator position with my previous employer.
 										At AWS, the main takeaway I got, was learning to adapt to the work culture and environment of a Fortune 500 company that is the industy leader in cloud computing. 
 									</p>
 									<p>Outside of my work at AWS, I took on learning cloud computing concepts, but I chose to study their competitor's services, Microsoft <a href="https://github.com/StudentLoans999/Azure">Azure</a> since I already was learning AWS' services at my workplace.
@@ -101,16 +102,20 @@
 											 (<a href="https://www.credly.com/badges/91aa9908-1a91-4f7d-9419-e49bcf8a978e/public_url">Microsoft</a>, <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/V7NM8MHGSPEM">Google</a>, <a href="https://www.datacamp.com/certificate/DAA0012453114879">DataCamp</a>) and received their certificates after passing their exams.
 										I also wanted to work on producing visualizations because I found it fun being able to showcase data and make insights that drive business decisions with just at-a-glance dashboards and clean reports.
 										So I created some dashboards and reports through <a href="https://www.youtube.com/playlist?list=PL8h_7gDhr185xJcsKcpaFyXbmzMKpqdK_">PowerBI</a> (sometimes with raw data extracted from Excel) while learning SQL and R on the side to help shape the data.</p>
+									
+									<h2 style="color:chocolate; text-decoration: black underline overline;">Data Analyst</h2>
+									<p>I'm currently working as a freelance Data Analyst, where I develop and maintain dashboards and reports to track key metrics and performance indicators, by using Tableau and PowerBI.
+									</p>
 									<hr class="major" />
 
 									<h2 style="color: yellow;">Now</h2>
 									<p>For AWS I got certified as a <a href="https://www.credly.com/badges/f03ecf85-8fb5-45ac-8cec-7c1b0b404bfd/linked_in_profile">Solutions Architect</a> after learning from multiple courses.</p>
-									<p>Currently I'm building up my experience by working on and completing an array of projects and labs across multiple cloud areas.</p>
+									<p>Currently I'm building up my experience by working on and completing an array of projects and labs across multiple data analyst areas.</p>
 									<hr class="major" />
 
 									<h2 style="color: green;">Next Steps</h2>
 									<p>After I land a new role, I plan to continue my IT education and experience; bolstering my skillset and enriching my technical knowledge.</p>
-									<p>I have some passion projects of mine I'm interested in pursuing that involve emerging technologies like artificial intelligence and machine learning.</p>
+									<p>I have some passion projects of mine I'm interested in pursuing that involve emerging technologies like artificial intelligence, machine learning, and data science.</p>
 								</section>
 
 						</div>
