--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<article>
 											<a href="data.html"><span class="icon solid fa-signal"></a></span>
 											<div class="content">
-												<h3><a href="data.html">Data Analysis & Visualization (PowerBI, SQL)</a></h3>
+												<h3><a href="data.html">Data Analysis & Visualization (PowerBI, SQL, Tableau)</a></h3>
 												<h5 style="color:coral; text-decoration:double;">MS Data Analysis Certification</h5>
 												<a href="https://www.credly.com/badges/91aa9908-1a91-4f7d-9419-e49bcf8a978e/public_url" style="color: darkorange;">Power BI Data Analyst Associate</a>
 												<br></br>
