--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
 											<h3 style="color: darkcyan;"><a href="Olympic Games Analysis.html">Olympic Games Analysis</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - PowerBI]</h5>
 										</article>
+										<article>
+											<a href="EDA of Claim Classification Dataset.html" class="image"><img src="images/EDA of Claim Classification Dataset.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="EDA of Claim Classification Dataset.html">EDA of Claim Classification Dataset</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 									</div>
 								</section>
 
