--- a/EDA of Claim Classification Dataset.html
+++ b/EDA of Claim Classification Dataset.html
@@ -41,8 +41,8 @@
 										<img src="images/EDA of Claim Classification Dataset.PNG">
 										<br></br>
 										<h3>Summary</h3>
-										<p>I created a dashboard through PowerBI (with the raw data residing in Excel) that displays an overview of customer-related data for a fictional business.</p>
-										<p>It has interactive visualizations like: Donut charts, Slicers, Clustered Bar charts, a Card, and a Stacked Column chart</p>
+										<p>I created a story through Tableau that displays an overview of fictional TikTok data from theGoogle Advanced Data Analytics Professional Certificate.</p>
+										<p>It has interactive visualizations like: Scatter plot, Pie chart, Box and Whisker plots, and a Bar chart</p>
 										<a href="https://public.tableau.com/app/profile/david.richey7003/viz/EDAofClaimClassificationDataset_17127821537220/Story1" class="button primary fit">Link to My Project</a>
 						</div>
 					</div>
