--- a/EDA of Claim Classification Dataset.html
+++ b/EDA of Claim Classification Dataset.html
@@ -42,7 +42,7 @@
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created a story through Tableau that displays an overview of fictional TikTok data from the Google Advanced Data Analytics Professional Certificate.</p>
-										<p>It has interactive visualizations like: Scatter plot, Pie chart, Box and Whisker plots, and a Bar chart</p>
+										<p>It has interactive visualizations like: a Scatter plot, a Pie chart, Box and Whisker plots, and a Bar chart</p>
 										<a href="https://public.tableau.com/app/profile/david.richey7003/viz/EDAofClaimClassificationDataset_17127821537220/Story1" class="button primary fit">Link to My Project</a>
 						</div>
 					</div>
