--- a/index.html
+++ b/index.html
@@ -215,6 +215,11 @@
 											<h3 style="color: darkcyan;"><a href="EDA of Claim Classification Dataset.html">EDA of Claim Classification Dataset</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="CO2 per Capita for each Country by Year.html" class="image"><img src="images/CO2 per Capita for each Country by Year.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="CO2 per Capita for each Country by Year.html">CO2 per Capita for each Country by Year</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 									</div>
 								</section>
 
