--- a/CO2 per Capita for each Country by Year.html
+++ b/CO2 per Capita for each Country by Year.html
@@ -38,7 +38,7 @@
 									</header>
 
 									<!-- Content -->
-										<img src="images/CO2 per Capita for each Country by Year.PNG">
+										<img src="images/CO2 per Capita for each Country by Year.PNG" width="200" height="150">
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created a visualization through Tableau that displays the CO2 per Capita for each Country by Year from the Google Advanced Data Analytics Professional Certificate course.</p>
