--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
 											<h3 style="color: darkcyan;"><a href="CO2 per Capita for each Country by Year.html">CO2 per Capita for each Country by Year</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="Total distance and total amount TLC 2017.html" class="image"><img src="images/Total distance and total amount TLC 2017.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="Total distance and total amount TLC 2017.html">Total distance and total amount TLC 2017</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 									</div>
 								</section>
 
