--- a/index.html
+++ b/index.html
@@ -225,6 +225,11 @@
 											<h3 style="color: darkcyan;"><a href="Total distance and total amount TLC 2017.html">Total distance and total amount TLC 2017</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html" class="image"><img src="images/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html">Impact of Holidays on Seoul Bike Rentals in 2017 - 2018</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 									</div>
 								</section>
 
