Update Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html

--- a/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html
+++ b/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html
@@ -38,7 +38,7 @@
 									</header>
 
 									<!-- Content -->
-										<img src="images/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.PNG">
+										<img src="images/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.PNG" width="1600">
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created two bar graphs through Tableau that display an overview of fictional bike rental data in Seoul with slicers for the Day of the Week and the Month, from the Google Advanced Data Analytics Professional Certificate course.</p>
