--- a/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html
+++ b/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html
@@ -41,7 +41,7 @@
 										<img src="images/Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.PNG" width="1600">
 										<br></br>
 										<h3>Summary</h3>
-										<p>I created two bar graphs through Tableau that display an overview of fictional bike rental data in Seoul with slicers for the Day of the Week and the Month, from the Google Advanced Data Analytics Professional Certificate course.</p>
+										<p>I created two bar graphs through Tableau that display how Holidays impact (fictional) bike rental data in Seoul with slicers for the Day of the Week and the Month, from the Google Advanced Data Analytics Professional Certificate course.</p>
 										<a href="https://public.tableau.com/app/profile/david.richey7003/viz/TotaldistanceandtotalamountTLC2017_17127796533720/Sheet1" class="button primary fit">Link to My Project</a>
 						</div>
 					</div>
