--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
 											<h3 style="color: darkcyan;"><a href="Impact of Holidays on Seoul Bike Rentals in 2017 - 2018.html">Impact of Holidays on Seoul Bike Rentals in 2017 - 2018</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="Lightning Strikes Story 1.html" class="image"><img src="images/Lightning Strikes Story 1.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="Lightning Strikes Story 1.html">Lightning Strikes Story 1</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
+									</div>
 									</div>
 								</section>
 
