--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@
 											<h3 style="color: darkcyan;"><a href="Lightning Strikes Story 1.html">Lightning Strikes Story 1</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="Seoul Average Bike Rentals per Hour on Weekdays in 2018.html" class="image"><img src="images/Seoul Average Bike Rentals per Hour on Weekdays in 2018.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="Seoul Average Bike Rentals per Hour on Weekdays in 2018.html">Seoul Average Bike Rentals per Hour on Weekdays in 2018</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 									</div>
 									</div>
 								</section>
