Update Seoul Average Bike Rentals per Hour on Weekdays in 2018.html

--- a/Seoul Average Bike Rentals per Hour on Weekdays in 2018.html
+++ b/Seoul Average Bike Rentals per Hour on Weekdays in 2018.html
@@ -38,7 +38,7 @@
 									</header>
 
 									<!-- Content -->
-										<img src="images/Seoul Average Bike Rentals per Hour on Weekdays in 2018.PNG">
+										<img src="images/Seoul Average Bike Rentals per Hour on Weekdays in 2018.PNG" width="1600">
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created a dashboard through Tableau that displays fictional bike Seoul bike rentals per Weekday and Season based on the Hour, from the Google Advanced Data Analytics Professional Certificate course.</p>
