--- a/index.html
+++ b/index.html
@@ -240,6 +240,11 @@
 											<h3 style="color: darkcyan;"><a href="Seoul Average Bike Rentals per Hour on Weekdays in 2018.html">Seoul Average Bike Rentals per Hour on Weekdays in 2018</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="Lightning Strikes 2.html" class="image"><img src="images/Lightning Strikes 2.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="Lightning Strikes 2.html">Lightning Strikes 2</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 									</div>
 									</div>
 								</section>
