Update Lightning Strikes Story 1.html

--- a/Lightning Strikes Story 1.html
+++ b/Lightning Strikes Story 1.html
@@ -42,7 +42,7 @@
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created a story through Tableau that displays how lightning strikes have increased over the years in the U.S. and particularly moved westward, with a focus on Texas, Oklahoma, and Kansas; from the Google Advanced Data Analytics Professional Certificate course.</p>
-                    								<p>It has interactive visualizations like: a Line graph, a Map with a Timeline, and a Heatmap</p>
+                    								<p>It has interactive visualizations like: a Line graph, a Map with a Timeline, and a Map focused on specific states</p>
 										<a href="https://public.tableau.com/app/profile/david.richey7003/viz/LightningStrikesStory1_17127691626100/Story1" class="button primary fit">Link to My Project</a>
 						</div>
 					</div>
