Update Lightning Strikes 2.html

--- a/Lightning Strikes 2.html
+++ b/Lightning Strikes 2.html
@@ -38,7 +38,7 @@
 									</header>
 
 									<!-- Content -->
-										<img src="images/Lightning Strikes 2.PNG">
+										<img src="images/Lightning Strikes 2.PNG" width="1600">
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created a dashboard through Tableau that displays fictional lightning strike data, from the Google Advanced Data Analytics Professional Certificate course.</p>
