Update Lightning Strikes 1.html

--- a/Lightning Strikes 1.html
+++ b/Lightning Strikes 1.html
@@ -38,7 +38,7 @@
 									</header>
 
 									<!-- Content -->
-										<img src="images/Lightning Strikes 1.PNG">
+										<img src="images/Lightning Strikes 1.PNG" width="1600">
 										<br></br>
 										<h3>Summary</h3>
 										<p>I created a Column Chart visualization through Tableau that displays lightning strikes by Year and Quarter; from the Google Advanced Data Analytics Professional Certificate course.</p>
