--- a/index.html
+++ b/index.html
@@ -245,11 +245,7 @@
 											<h3 style="color: darkcyan;"><a href="Lightning Strikes 2.html">Lightning Strikes 2</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
-										<article>
-											<a href="Lightning Strikes 1.html" class="image"><img src="images/Lightning Strikes 1.PNG" alt="" /></a>
-											<h3 style="color: darkcyan;"><a href="Lightning Strikes 1.html">Lightning Strikes 1</a></h3>
-											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
-										</article>
+										
 									</div>
 									</div>
 								</section>
@@ -300,7 +296,10 @@
 											<a href="Discord Bot.html" class="image"><img src="images/DiscordBot.png" alt="" /></a>
 											<h3 style="color:tomato;">Python - Discord Bot</h3>
 										</article>
-										
+										<article>
+											<a href="Anime Comparison.html" class="image"><img src="images/anime.png" alt="" /></a>
+											<h3 style="color: gold;">PowerBI - Anime Comparison</h3>
+										</article>
 									</div>
 								</section>
 
