--- a/index.html
+++ b/index.html
@@ -245,6 +245,11 @@
 											<h3 style="color: darkcyan;"><a href="Lightning Strikes 2.html">Lightning Strikes 2</a></h3>
 											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
 										</article>
+										<article>
+											<a href="Lightning Strikes 1.html" class="image"><img src="images/Lightning Strikes 1.PNG" alt="" /></a>
+											<h3 style="color: darkcyan;"><a href="Lightning Strikes 1.html">Lightning Strikes 1</a></h3>
+											<h5 style="color: turquoise;">[Data Analysis & Visualization - Tableau]</h5>
+										</article>
 										
 									</div>
 									</div>
