--- a/aboutme.html
+++ b/aboutme.html
@@ -36,7 +36,7 @@
 										<h1>My Past -> Currently -> Next Steps</h1>
 									</header>
 
-									<span class="image main"><img src="images/a.png" alt="" /></span>
+									<span class="image main"><img src="images/IT_Journey.png" alt="" /></span>
 
 									<h2 style="color: orange;">The tldr</h2>
 									<p>Been working in IT since 2015 in these roles:</p>
