--- a/aboutme.html
+++ b/aboutme.html
@@ -36,13 +36,14 @@
 										<h1>My Past -> Currently -> Next Steps</h1>
 									</header>
 
-									<span class="image main"><img src="images/IT_Journey.png" alt="" /></span>
+									<span class="image main"><img src="images/Journey_IT.png" alt="" /></span>
 
 									<h2 style="color: orange;">The tldr</h2>
 									<p>Been working in IT since 2015 in these roles:</p>
 									<ol>
 										<li>Mobile Computer Class Teacher</li>
 										<li>Help Desk Support Technician</li>
+										<li>Data Analyst</li>
 										<li>System Administrator</li>
 										<li>Data Center Operations Technician</li>
 										<li>Application Administrator</li>
