--- a/aboutme.html
+++ b/aboutme.html
@@ -69,11 +69,17 @@
 									<h2 style="color:chocolate; text-decoration: black underline overline;">Mobile Computer Class Teacher</h2>
 									<p>I attained my first professional experience in IT by working at an after-school program across multiple middle schools, teaching kids programming (Lua) through a custom Minecraft mod called TurtleCraft.
 										They interacted with and guided a pet turtle in the game, through the use of lines of code that they wrote that issued commands for the turtle to follow. I led and taught them along the way.
-									To them, they were playing their favorite video game, but what they may not have realized, was that they were learning how to program!</p>
+									To them, they were playing their favorite video game, but what they may not have realized, was that they were learning how to program!
+									</p>
 									<h2 style="color:chocolate; text-decoration: black underline overline;">Help Desk Support Technician</h2>
 									<p>My next step in my journey introduced me into a whole other territory. It was similar to my teaching job before, in that I was using my technical know-how to help people out, but this time around I was providing customer support to end-users.
 										In this role, what I learned most was how to behave in a professional IT business, like following their established processes and procedures to best serve the clients' and company's interests.
 										What I appreciated most was working with a team to achieve a shared goal that involved multiple steps along the way, with everything kept track in Jira, a ticketing system and also our well-written documentation.
+									</p>
+									<h2 style="color:chocolate; text-decoration: black underline overline;">Data Analyst</h2>
+									<p>I then started working as a Data Analyst for a startup, where I tracked market trends to provide strategic insights to deliver data-driven strategies for product enhancements. I then
+										performed exploratory data analysis to identify patterns to drive decision-making across product and marketing teams.
+										<p>With all of this data collection, I kept track of everything using Excel and made PowerPoint presentations summarizing what the data was showing to help the company make better business decisions.</p>
 									</p>
 									<h2 style="color:chocolate; text-decoration: black underline overline;">System Administrator</h2>
 									<p>After that role ended, I studied for and obtained my first technical certificate, the <a href="https://www.credly.com/badges/6659d0c9-21e0-4508-b464-5b8358e2419c">CompTIA A+</a> 
@@ -113,10 +119,6 @@
 									<p>For AWS I got certified as a <a href="https://www.credly.com/badges/f03ecf85-8fb5-45ac-8cec-7c1b0b404bfd/linked_in_profile">Solutions Architect</a> after learning from multiple courses.</p>
 									<p>Currently I'm building up my experience by working on and completing an array of projects and labs across multiple data analyst areas.</p>
 									<hr class="major" />
-
-									<h2 style="color: green;">Next Steps</h2>
-									<p>After I land a new role, I plan to continue my IT education and experience; bolstering my skillset and enriching my technical knowledge.</p>
-									<p>I have some passion projects of mine I'm interested in pursuing that involve emerging technologies like artificial intelligence, machine learning, and data science.</p>
 								</section>
 
 						</div>
